welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: '<-' expected but '=' found.
for(i=o, i<4 , i++)
     ^RunFour:8: error: illegal start of simple expression
	}
        ^