welcome.lessons.welcome.variables.RunFour.scala.code
for(i=o, i<4 , i++)
 while(!i=4){
 	avance();
 }
